--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,14 @@
 name: First WorkFlow Ex
 on: push
 jobs:
-  run-shell-commands:
+  run-shell-command:
     runs-on: ubuntu-latest
     steps:
-      -name: echo a String
-       run: echo "Hello World"
-      -name: Multiline Script
-       run: |
-        node -v
-        npm -v
+      - name: echo a String
+        run: echo "Hello World"
+      - name: Multiline Script
+        run: |
+          node -v
+          npm -v
+
+      
