--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,11 @@ jobs:
         run: |
          node -v
          npm -v
-
-<<<<<<< HEAD
-=======
-      
->>>>>>> 746e8737edabc10357bd4471aa43817a4d7bffe7
+  run-power-shell-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Platform
+        run: |
+        import platform
+        print(platform.processor())
+      shell: python
