--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
          node -v
          npm -v
-      - name: Platform
+      - name: Python Command
         run: |
           import platform
           print(platform.processor())
@@ -19,11 +19,6 @@ jobs:
     runs-on: windows-latest
     needs: [run-shell-commands]
     steps:
-      - name: Windows Platform
-        run: |
-          import platform
-          print(platform.processor())
-        shell: python
       - name: Directory Bash
         run: pwd
       - name: Directory Power shell
