--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,6 +4,17 @@ jobs:
   Action-Workflow:
     runs-on: ubuntu-latest
     steps:
+      - name: List Files
+        run: |
+          pwd
+          ls
+      - name: checkout
+        uses: actions/checkout@v1
+      - name:
+        run: |
+          pwd
+          ls
+
       - name: Simple JS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1
